turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:9: error: not found: value setColorBrosse
          setColorBrosse(colors(0))
          ^LangtonsAnt:11: error: not found: value setColorBrosse
          setColorBrosse(colors(i+1))
          ^