turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  var couleurSol=getCouleurSol()
  for (i<-0 to colors.length-1){
    if (getCouleurSol()==colors(i)){
      if (rule(i)=='L'){
        gauche()
        if (i+1>=colors.length){
          setColorBrosse(colors(0))
        }else{
          setColorBrosse(colors(i+1))
        }
        baisseBrosse()
        leveBrosse()
      }
    }
  }
}